--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   padding: 2rem;
   text-align: center;
 }
-
+body{background: #0b1e1a;color: #63a88e;font-size: 30px;}
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +39,14 @@
 
 .read-the-docs {
   color: #888;
+}
+button {
+  background: #63a88e;
+  color: white;
+  padding: 1em 2em;
+  border: none;
+  border-radius: 0.5em;
+  font-size: 1em;
+  cursor: pointer;
+  /* transition: background 300ms; */
 }
